--- a/resources/application.properties
+++ b/resources/application.properties
@@ -9,8 +9,10 @@ spring.datasource.password=password
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
-spring.jpa.show-sql=true
+
+server.error.include-message=always
